# kludoteca-svn

trunk/alpha/kludoteca/: ChangeLog  Doxyfile  Makefile.in  OBSERVATIONS  TODO  configure  configure.in  fixperms.sh  kludoteca.kdevelop  kludoteca.kdevelop.pcs  kludoteca.kdevses  kludoteca.tag  subdirs
trunk/alpha/kludoteca/dbdump/: klbd.sql  kldb-er.dia
trunk/alpha/kludoteca/doc/: Makefile.am  Makefile.in
trunk/alpha/kludoteca/doc/en/: Makefile.am  Makefile.in  index.docbook
trunk/alpha/kludoteca/doc/es/: Makefile.am  Makefile.in  index.docbook
trunk/alpha/kludoteca/doxdoc/: Makefile.am  main.dox  screenshots.dox
trunk/alpha/kludoteca/po/: Makefile.am  Makefile.in  es.gmo  es.po  kludoteca.pot
trunk/alpha/kludoteca/rtklib/: Makefile.am  Makefile.in  rtk.cpp  rtk.h  rtkconfig.h  rtkformatter.cpp  rtkformatter.h  rtkformula.cpp  rtkformula.h  rtkimage.cpp  rtkimage.h  rtkinput.cpp  rtkinput.h  rtkinputcsv.cpp  rtkinputcsv.h  rtkinputfield.cpp  rtkinputfield.h  rtkinputsql.cpp  rtkinputsql.h  rtkinputxml.cpp  rtkinputxml.h  rtkmoney.cpp  rtkmoney.h  rtknamespace.cpp  rtknamespace.h  rtkobject.cpp  rtkobject.h  rtkoutput.cpp  rtkoutput.h  rtkoutputhtml.cpp  rtkoutputhtml.h  rtkoutputopenoffice.cpp  rtkoutputopenoffice.h  rtkoutputqpainter.cpp  rtkoutputqpainter.h  rtkoutputtext.cpp  rtkoutputtext.h  rtkregconfig.cpp  rtkregconfig.h  rtkreport.cpp  (+9 more)
trunk/alpha/kludoteca/src/: Makefile.am  Makefile.in  crashhandler.cpp  crashhandler.h  kl_infopage.css  klfirstdialog.cpp  klfirstdialog.h  kludoteca.cpp  kludoteca.h  kludoteca.lsm  kludotecaiface.h  kludotecaui.rc  kludotecaview.cpp  kludotecaview.h  kludotecaview.loT  ldtapp.cpp  ldtapp.h  main.cpp  mainpage.html  modulodejuegos.cpp  osd.cpp  osd.h  page2.html  page4.html  page5.html  pref.cpp  pref.h  validateuser.cpp  validateuser.h
trunk/alpha/kludoteca/src/admin-module/: Makefile.am  Makefile.in  admindatabase.cpp  admindatabase.h  adminlogs.cpp  adminlogs.h  adminusers.cpp  adminusers.h  adminwidget.cpp  adminwidget.h  formadminusers.cpp  formadminusers.h  klbd.sql
trunk/alpha/kludoteca/src/bd-module/: Makefile.am  Makefile.in  bdconnection.cpp  bdconnection.h
trunk/alpha/kludoteca/src/clients-module/: Makefile  Makefile.am  Makefile.in  clientswidget.cpp  clientswidget.h  formadminclients.cpp  formadminclients.h
trunk/alpha/kludoteca/src/dlslib/: Makefile.am  button.cpp  button.h  dmainwindow.cpp  dmainwindow.h
trunk/alpha/kludoteca/src/games-module/: Makefile.am  Makefile.in  formadmingame.cpp  formadmingame.h  gameslist.cpp  gameslist.h  gamesmodule.cpp  gamesmodule.h
trunk/alpha/kludoteca/src/klreports/: Makefile.am  klcanvasview.cpp  klcanvasview.h  klexportreport.cpp  klexportreport.h  klreportelement.cpp  klreportwidget.cpp  klreportwidget.h  klxmlreport.cpp  klxmlreport.h  klxmlreportparser.cpp  klxmlreportparser.h
trunk/alpha/kludoteca/src/lib/: Makefile  Makefile.am  Makefile.in  bdconnection.cpp  bdconnection.h  createdatabase.cpp  ddebug.cpp  ddebug.h  formbase.cpp  formbase.h  klcanvasview.cpp  klcanvasview.h  kldatabase.cpp  kldatabase.h  klenterprise.cpp  klenterprise.h  kllogger.cpp  kllogger.h  klmodulewidgetiface.h  klpermission.cpp  klpermission.h  klquery.cpp  klquery.h  klreportelement.cpp  klreportelement.h  klreportwidget.cpp  klreportwidget.h  klresultset.cpp  klresultset.h  klresultsetinterpreter.cpp  klresultsetinterpreter.h  kltable.cpp  kltable.h  kludotecaiface.h  klxmlreader.cpp  klxmlreader.h  klxmlreport.cpp  klxmlreport.h  ldtapp.cpp  ldtapp.h  (+4 more)
trunk/alpha/kludoteca/src/lib/.deps/: formbase.Plo  formbase.Po  ltlistview.Po  lttoolbox.Po
trunk/alpha/kludoteca/src/rents-module/: Makefile.am  Makefile.in  formadminrents.cpp  formadminrents.h  formqueryrent.cpp  formqueryrent.h  formrentsdebts.cpp  formrentsdebts.h  formreportrents.cpp  formreportrents.h  klcalc.cpp  klcalc.h  rentinfo.cpp  rentinfo.h  rentlist.cpp  rentlist.h  rentscontrollist.cpp  rentscontrollist.h  rentsdebts.cpp  rentsdebts.h  rentsmodule.cpp  rentsmodule.h  rentstbar.cpp  rentstbar.h  rentstimer.cpp  rentstimer.h  rentswidget.cpp  rentswidget.h
trunk/alpha/kludoteca/src/reports-module/: Makefile.am  Makefile.in  klreportmodule.cpp  klreportmodule.h
trunk/alpha/kludoteca/src/tournament-module/: Makefile.am  Makefile.in  admintournament.moc  formmatchorder.cpp  formmatchorder.h  formparticipants.cpp  formparticipants.h  formquerytournament.cpp  formquerytournament.h  formtournament.cpp  formtournament.h  matchgenerator.cpp  matchgenerator.h  participantslist.cpp  participantslist.h  roundlist.cpp  roundlist.h  tournamentactive.cpp  tournamentactive.h  tournamentmodule.cpp  tournamentmodule.h  tournamentold.cpp  tournamentold.h  tournamenttabbar.cpp  tournamenttabbar.h  tournamentwidget.cpp  tournamentwidget.h
trunk/doc/derautor/: Makefile  bibliografia.tex  derautor.nav  derautor.tex  derautor.toc  derechosdeautor.kilepr  introduccion.tex  legcolombiana.tex  licencias.tex  patentes.tex  tiposdederechos.tex
trunk/pre-alpha/kludoteca/: AUTHORS  Doxyfile  configure.in  configure.in.in  kludoteca.kdevses
trunk/pre-alpha/kludoteca/doc/: Makefile.am  Makefile.in
trunk/pre-alpha/kludoteca/doc/en/: index.docbook
trunk/pre-alpha/kludoteca/src/: Makefile.in  kludoteca.desktop  kludoteca.h  kludoteca.loT  kludotecaui.rc  kludotecaview.h  ldtapp.cpp  main.cpp  osd.h
trunk/pre-alpha/kludoteca/src/admin-module/: Makefile.am  adminwidget.cpp  formadminusers.cpp  formadminusers.h
trunk/pre-alpha/kludoteca/src/bd-module/: bdconnection.cpp  bdconnection.h
trunk/pre-alpha/kludoteca/src/clients-module/: clientswidget.h
trunk/pre-alpha/kludoteca/src/lib/: Makefile.am  formbase.h  ltlistview.loT
trunk/pre-alpha/kludoteca/src/tournament-module/: Makefile.am  Makefile.in  formtournament.cpp  tournamentmodule.cpp  tournamentold.cpp  tournamentwidget.h
trunk/pre-alpha/kludoteca/templates/: h
