INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = librtklib.a
noinst_HEADERS = rtkconfig.h rtkformatter.h rtkformula.h rtk.h rtkimage.h\
	rtkinputcsv.h rtkinputfield.h rtkinput.h rtkinputsql.h rtkinputxml.h\
	rtkmoney.h rtknamespace.h rtkobject.h rtkoutput.h rtkoutputhtml.h\
	rtkoutputopenoffice.h rtkoutputqpainter.h rtkoutputtext.h rtkregconfig.h\
	rtkreport.h rtksection.h rtkstyle.h rtkvariant.h
librtklib_a_SOURCES = rtk.cpp rtkformatter.cpp rtkformula.cpp rtkimage.cpp\
	rtkinput.cpp rtkinputcsv.cpp rtkinputfield.cpp rtkinputsql.cpp\
	rtkinputxml.cpp rtkmoney.cpp rtknamespace.cpp rtkobject.cpp\
	rtkoutput.cpp rtkoutputhtml.cpp rtkoutputopenoffice.cpp\
	rtkoutputqpainter.cpp rtkoutputtext.cpp rtkregconfig.cpp rtkreport.cpp\
	rtksection.cpp rtkstyle.cpp rtkvariant.cpp rtkxmlreport.cpp
