INCLUDES = -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = adminwidget.h adminusers.h admindatabase.h addminuserwidget.h formadminusers.h
noinst_LIBRARIES = libadmin-module.a
libadmin_module_a_SOURCES = admindatabase.cpp adminusers.cpp adminwidget.cpp addminuserwidget.cpp formadminusers.cpp
