INCLUDES = -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = adminwidget.h adminusers.h admindatabase.h formadminusers.h
noinst_LIBRARIES = libadmin-module.a
libadmin_module_a_SOURCES = admindatabase.cpp adminusers.cpp adminwidget.cpp \
	formadminusers.cpp

kladmimgsdir = $(kde_datadir)/kludoteca/admin-module/pics
kladmimgs_DATA = imgformusers.png
