INCLUDES = -I$(top_srcdir)/src/admin-module -I$(top_srcdir)/src/clients-module 	-I$(top_srcdir)/src/games-module -I$(top_srcdir)/src/lib -I$(top_srcdir)/src/tournament-module 	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libbd-module.a
noinst_HEADERS = bdconnection.h
libbd_module_a_SOURCES = bdconnection.cpp
