INCLUDES = -I$(top_srcdir)/src/admin-module -I$(top_srcdir)/src/games-module \
	-I$(top_srcdir)/src/lib -I$(top_srcdir)/src/tournament-module $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libclients-module.a
noinst_HEADERS = clientswidget.h formadminclients.h
libclients_module_a_SOURCES = clientswidget.cpp formadminclients.cpp
kldclientsiconsdir = $(kde_datadir)/kludoteca/clients-module/icons
kldclientsicons_DATA = default3.png
kldclientspicsdir = $(kde_datadir)/kludoteca/clients-module/pics
