INCLUDES = -I$(top_srcdir)/rtklib -I$(top_srcdir)/src/admin-module 	-I$(top_srcdir)/src/clients-module -I$(top_srcdir)/src/games-module -I$(top_srcdir)/src/klreports 	-I$(top_srcdir)/src/lib -I$(top_srcdir)/src/rents-module -I$(top_srcdir)/src/tournament-module 	$(all_includes)
METASOURCES = AUTO
lib_LIBRARIES = libdls.a
pkginclude_HEADERS = buttonbar.h button.h comdefs.h ddockwindow.h dmainwindow.h\
	docksplitter.h dtabwidget.h
libdls_a_SOURCES = buttonbar.cpp button.cpp ddockwindow.cpp dmainwindow.cpp\
	docksplitter.cpp dtabwidget.cpp
