INCLUDES = -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = gamesmodule.h gameslist.h formadmingame.h
noinst_LIBRARIES = libgames-module.a
libgames_module_a_SOURCES = gameslist.cpp gamesmodule.cpp formadmingame.cpp
kldgamespicsdir = $(kde_datadir)/kludoteca/games-module/pics
kldgamesiconsdir = $(kde_datadir)/kludoteca/games-module/icons
