INCLUDES = -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libklreport.a
noinst_HEADERS = klcanvasview.h klreportelement.h klreportwidget.h \
	klxmlreport.h klxmlreportparser.h klexportreport.h
libklreport_a_SOURCES = klcanvasview.cpp klreportelement.cpp klreportwidget.cpp \
	klxmlreport.cpp klxmlreportparser.cpp klexportreport.cpp
