INCLUDES = -I$(top_srcdir)/src/admin-module -I$(top_srcdir)/src/games-module \
	-I$(top_srcdir)/src/tournament-module $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = lib.a
noinst_HEADERS = lttoolbox.h ltlistview.h formbase.h kludotecaiface.h \
			kldatabase.h klresultset.h klresultsetinterpreter.h klquery.h klxmlreader.h \
			klpermission.h kllogger.h kltable.h klenterprise.h clicklineedit.h klfirstdialog.h \
	ldtapp.h
lib_a_SOURCES = lttoolbox.cpp ltlistview.cpp formbase.cpp kludotecaiface.skel \
			kldatabase.cpp klresultset.cpp klresultsetinterpreter.cpp klquery.cpp klxmlreader.cpp \
			klpermission.cpp kllogger.cpp kltable.cpp createdatabase.cpp klenterprise.cpp \
		clicklineedit.cpp klfirstdialog.cpp ldtapp.cpp
