INCLUDES = -I$(top_srcdir)/src/admin-module -I$(top_srcdir)/src/clients-module -I$(top_srcdir)/src/games-module -I$(top_srcdir)/src/lib -I$(top_srcdir)/src/rents-module -I$(top_srcdir)/src/tournament-module $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = librents-library.a
noinst_HEADERS = rentswidget.h
librents_library_a_SOURCES = rentswidget.cpp
