INCLUDES = -I$(top_srcdir)/src/klreports -I$(top_srcdir)/src/lib \
	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = librents-library.a
noinst_HEADERS = rentswidget.h formadminrents.h rentsmodule.h rentstbar.h \
	klcalc.h formrentsdebts.h formqueryrent.h rentstimer.h rentscontrollist.h
librents_library_a_SOURCES = rentswidget.cpp formadminrents.cpp rentsmodule.cpp \
	rentstbar.cpp klcalc.cpp formrentsdebts.cpp formqueryrent.cpp rentstimer.cpp \
	rentscontrollist.cpp
kldrentsiconsdir = $(kde_datadir)/kludoteca/rents-module/icons
kldrentspicsdir = $(kde_datadir)/kludoteca/rents-module/pics
