INCLUDES = -I$(top_srcdir)/src/admin-module -I$(top_srcdir)/src/clients-module 	-I$(top_srcdir)/src/games-module -I$(top_srcdir)/src/klreports -I$(top_srcdir)/src/lib 	-I$(top_srcdir)/src/rents-module -I$(top_srcdir)/src/tournament-module -I$(top_srcdir)/src/dlslib 	$(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libreports-module.a


noinst_HEADERS = klreportmodule.h
libreports_module_a_SOURCES = klreportmodule.cpp
