INCLUDES = -I$(top_srcdir)/src/lib $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = tournamentwidget.h tournamentmodule.h tournamentold.h \
	tournamentactive.h
noinst_LIBRARIES = libtournament-module.a
libtournament_module_a_SOURCES = tournamentactive.cpp tournamentmodule.cpp\
	tournamentold.cpp tournamentwidget.cpp
